made the read aloud functionality

--- a/translation_test.html
+++ b/translation_test.html
@@ -93,6 +93,16 @@
             <li>Select your desired target language from the dropdown</li>
             <li>Click "Start Translation" to translate this entire page</li>
         </ol>
+        
+        <h2>🔊 How to Test the Read Aloud Feature</h2>
+        <ol>
+            <li>Click the Smart Notes extension icon in your browser toolbar</li>
+            <li>Click the "🔊 Read Aloud" button in the extension popup</li>
+            <li>Adjust voice settings: select a voice, adjust speed, pitch, and volume</li>
+            <li>Click "Play" to start reading the page content aloud</li>
+            <li>Use "Pause" and "Stop" controls as needed</li>
+            <li><strong>Advanced Test:</strong> Translate the page first, then use Read Aloud to hear content in the translated language!</li>
+        </ol>
 
         <h2>✨ Key Features of Smart Notes Translation</h2>
         <div class="features">
