--- a/extension/popup.html
+++ b/extension/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>📝 Smart Notes</h1>
+            <h1>LANG AUDI</h1>
             <p class="subtitle">AI-powered structured notes with visual elements</p>
         </div>
         
